# storage-manager

./: .clang-format  CMakeLists.txt
include/: constants.hpp  serializer.hpp  storage_manager.hpp
include/example/: constants.hpp  sel_event_record.hpp  sel_storage_manager.hpp
include/example/sel/: sel_event_record.hpp  sel_storage_manager.hpp  sel_utils.hpp
src/: main.cpp  storage_manager.cpp
src/example/: main.cpp  sel_storage_manager.cpp
tests/: CMakeLists.txt  storage_manager_test.cpp
